# terraformer-3d

./: .gitignore  Cargo.toml  DESIGN.md  README.md  TODO.md
.cargo/: config.toml
assets/: doc
assets/img/: doc
assets/models/: Character1.blend  Character1.gltf  SuzanneColored.fbx  doc
assets/models/ayanami_rei/: license.txt  scene.gltf
assets/models/iron_harvest_straznik/: license.txt  scene.gltf
assets/models/mech/: license.txt  scene.gltf
assets/settings/: user_progress.yml
assets/templates/2d-platformer/maplestory-like.yml/: user_progress.yml
assets/templates/third-person/turn-based-jrpg/: user_progress.yml
assets/templates/top-down/backyard-monsters-based/: user_progress.yml
assets/templates/top-down/card-based/: user_progress.yml
assets/templates/top-down/civ-style/: user_progress.yml
assets/templates/top-down/civ-style/civs/: australia.yml
docs/: DESIGN.md  GAMES.md  index.md
examples/minesweeper3d/: Cargo.toml  README.md
examples/minesweeper3d/assets/settings/: user_progress.yml
examples/pure_vulkan/: Cargo.toml
examples/pure_vulkan/cpp_implementation/: CMakeLists.txt
examples/pure_vulkan/src/: main.rs
src/: lib.rs  main.rs  window.rs
src/assetloader/: mod.rs
src/ecs/: mod.rs
src/ecs/component_presets/: animate.rs  camera.rs  character.rs  collision.rs  combat.rs  mod.rs  movement.rs  resource.rs  useable.rs
src/ecs/entity_presets/: mod.rs
src/ecs/system_presets/: input.rs  mod.rs  physics.rs
src/entity/: mod.rs
src/entity/presets/: mod.rs  worldobject.rs
src/filesystem/: mod.rs
src/game/: game_controller.rs  loader.rs  map.rs  mod.rs
src/game/entity/: mod.rs
src/game/entity/character/: mod.rs
src/game/entity/groups/: mod.rs
src/game/entity/worldobject/: building.rs  decoration.rs  mod.rs
src/game/entity2d/: mod.rs
src/game/level/: mod.rs
src/graphics/: device.rs  mod.rs  vulkan.rs
src/graphics/shaders/: doc  mod.rs  shader.wgsl
src/math/: mod.rs
src/math/physics/: mod.rs
src/physics/: mod.rs
src/scene/: camera.rs  mod.rs
src/scene/animator/: mod.rs
src/settings/: mod.rs
src/types/: mod.rs
tests/: basics.rs
