[package]
description = "A 3d game engine for quantii"
edition = "2021"
license-file = "LICENSE"
name = "terraformer3d"
repository = "https://github.com/SpectralProject/terraformer-3d"
version = "0.1.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18"
env_logger = "0.9"
image = "0.24.0"
log = "0.4"
pollster = "0.2"
wgpu = "0.12"
winit = "0.26"
