[package]
description = "A 3d game engine for quantii"
edition = "2021"
license-file = "LICENSE"
name = "terraformer3d"
repository = "https://github.com/SpectralProject/terraformer-3d"
version = "0.1.0"

[[example]]
name = "minesweeper3d"

[dependencies]
cgmath = "0.18"
env_logger = "0.9"
image = "0.24.0"
log = "0.4"
pollster = "0.2"
wgpu = "0.12"
winit = "0.26"
blend = "0.6.1"
itertools = "0.10.3"
lazy_static = "1.4.0"
nalgebra = "0.31.0"
gltf = "1.0.0"
obj = "0.10.2"
serde = "1.0"
serde_yaml = "0.8"
glam = "0.21.2"
dioxus = { version = "0.2.3", features = ["desktop"] }
